@@ -1,0 +1,39 @@
+// Copyright (C) 2008 Solveig Bruvoll and Anders Logg.
+// Licensed under the GNU LGPL Version 2.1.
+//
+// First added:  2008-05-02
+// Last changed: 2008-05-02
+//
+// This demo demonstrates how to move the vertex coordinates
+// of a boundary mesh and then updating the interior vertex
+// coordinates of the original mesh by suitably interpolating
+// the vertex coordinates (useful for implementation of ALE
+// methods).
+
+#include <dolfin.h>
+
+using namespace dolfin;
+
+int main()
+{
+  // Create mesh
+  UnitCube mesh(8, 8, 8);
+  plot(mesh);
+
+  // Create boundary mesh
+  MeshFunction<unsigned int> vertex_map;
+  BoundaryMesh boundary(mesh, vertex_map);
+
+  // Move vertices in boundary
+  for (VertexIterator v(boundary); !v.end(); ++v)
+  {
+    real* x = v->x();
+    x[0] = x[0] + x[2];
+  }
+
+  // Move mesh
+  mesh.move(boundary, vertex_map);
+  plot(mesh);
+
+  return 0;
+}
